[package]
name = "matrix-firefly-bot"
authors = ["Peter Winckles <pwinckles@pm.me>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4"
matrix-sdk = { version = "0.6", default-features = false, features = ["anyhow", "rustls-tls", "e2e-encryption", "sled"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
toml = "0.5"
